2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-database.c:
	(safe_g_hash_table_insert): remove - no hash table here.

2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-engine.h: add gconf_engine_get_for_addresses()
	and gconf_engine_get_local_for_addresses().
	
	* gconf/gconf.c:
	(gconf_engine_connect): implement setting up a database from
	an arbitrary stack of sources.
	(register_engine): use the concatenation of addresses for the key.
	(unregister_engine): free the persistent address and address list on
	unregistering.
	(lookup_engine): use the concatenation of addresses for the key.
	(gconf_engine_get_local_for_addresses): add.
	(gconf_engine_get_for_address): update for register_engine change.
	(gconf_engine_get_for_addresses): impl support for remote composite dbs.
	(update_listener): update for the fact that listeners are now saved using
	the persistent name.
	
	* gconf/GConfX.idl: extend the ConfigServer interface
	by adding ConfigServer2 inherting from ConfigServer.
	Add ConfigServer2::get_database_for_addresses().
	
	* gconf/gconf-backend.c:
	(gconf_address_valid), (gconf_get_backend): check the backend
	address doesn't contain any special characters.
	
	* gconf/gconf-database.[ch]:
	(source_notify_cb): don't notify unless this change could
	actually cause a change for the client.
	(gconf_database_notify_listeners): impl. notifying "other"
	listeners - clients listening on other stacks which contains
	any of the modified sources.
	(gconf_database_set), (gconf_database_unset): keep track of
	the sources modified by the change and update for the
	notify_listeners change.
	(gconf_database_recursive_unset): ditto and upd. for the
	change in the listeners list returned by
	gconf_sources_recursive_unset().
	(gconf_database_get_persistent_name): make the persistent
	name a concatenation of the individual addresses instead
	of the first address.
	
	* gconf/gconf-internals.[ch]: