@@ -1,3 +1,8 @@
+2004-03-30  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconf-backend.h: actually add the vtable_size
+	vtable member.
+
 2004-03-29  Mark McLoughlin  <mark@skynet.ie>
 
 	* gconf/gconf-database.c:
